// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component test Snapshot tests for each modifier renders table only with bordered turned on and matches snapshot 1`] = `
<table
  className="persmap-table persmap-table--bordered"
>
  <thead
    className="persmap-table_header"
  >
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <th
        className="persmap-table_header_item"
      >
        
      </th>
      <th
        className="persmap-table_header_item"
      >
        id
      </th>
      <th
        className="persmap-table_header_item"
      >
        col1
      </th>
      <th
        className="persmap-table_header_item"
      >
        col2
      </th>
      <th
        className="persmap-table_header_item"
      >
        col3
      </th>
    </tr>
  </thead>
  <tbody
    className="persmap-table_body"
  >
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        1
      </td>
      <td
        className="persmap-table_row_column"
      >
        11
      </td>
      <td
        className="persmap-table_row_column"
      >
        12
      </td>
      <td
        className="persmap-table_row_column"
      >
        13
      </td>
    </tr>
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-chevron-down persmap-table_row--control"
          id={undefined}
          onClick={[Function]}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        2
      </td>
      <td
        className="persmap-table_row_column"
      >
        21
      </td>
      <td
        className="persmap-table_row_column"
      >
        22
      </td>
      <td
        className="persmap-table_row_column"
      >
        23
      </td>
    </tr>
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        3
      </td>
      <td
        className="persmap-table_row_column"
      >
        31
      </td>
      <td
        className="persmap-table_row_column"
      >
        32
      </td>
      <td
        className="persmap-table_row_column"
      >
        33
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table component test Snapshot tests for each modifier renders table only with condensed turned on and matches snapshot 1`] = `
<table
  className="persmap-table persmap-table--condensed"
>
  <thead
    className="persmap-table_header"
  >
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <th
        className="persmap-table_header_item"
      >
        
      </th>
      <th
        className="persmap-table_header_item"
      >
        id
      </th>
      <th
        className="persmap-table_header_item"
      >
        col1
      </th>
      <th
        className="persmap-table_header_item"
      >
        col2
      </th>
      <th
        className="persmap-table_header_item"
      >
        col3
      </th>
    </tr>
  </thead>
  <tbody
    className="persmap-table_body"
  >
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        1
      </td>
      <td
        className="persmap-table_row_column"
      >
        11
      </td>
      <td
        className="persmap-table_row_column"
      >
        12
      </td>
      <td
        className="persmap-table_row_column"
      >
        13
      </td>
    </tr>
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-chevron-down persmap-table_row--control"
          id={undefined}
          onClick={[Function]}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        2
      </td>
      <td
        className="persmap-table_row_column"
      >
        21
      </td>
      <td
        className="persmap-table_row_column"
      >
        22
      </td>
      <td
        className="persmap-table_row_column"
      >
        23
      </td>
    </tr>
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        3
      </td>
      <td
        className="persmap-table_row_column"
      >
        31
      </td>
      <td
        className="persmap-table_row_column"
      >
        32
      </td>
      <td
        className="persmap-table_row_column"
      >
        33
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table component test Snapshot tests for each modifier renders table only with hovered turned on and matches snapshot 1`] = `
<table
  className="persmap-table persmap-table--hovered"
>
  <thead
    className="persmap-table_header"
  >
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <th
        className="persmap-table_header_item"
      >
        
      </th>
      <th
        className="persmap-table_header_item"
      >
        id
      </th>
      <th
        className="persmap-table_header_item"
      >
        col1
      </th>
      <th
        className="persmap-table_header_item"
      >
        col2
      </th>
      <th
        className="persmap-table_header_item"
      >
        col3
      </th>
    </tr>
  </thead>
  <tbody
    className="persmap-table_body"
  >
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        1
      </td>
      <td
        className="persmap-table_row_column"
      >
        11
      </td>
      <td
        className="persmap-table_row_column"
      >
        12
      </td>
      <td
        className="persmap-table_row_column"
      >
        13
      </td>
    </tr>
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-chevron-down persmap-table_row--control"
          id={undefined}
          onClick={[Function]}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        2
      </td>
      <td
        className="persmap-table_row_column"
      >
        21
      </td>
      <td
        className="persmap-table_row_column"
      >
        22
      </td>
      <td
        className="persmap-table_row_column"
      >
        23
      </td>
    </tr>
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        3
      </td>
      <td
        className="persmap-table_row_column"
      >
        31
      </td>
      <td
        className="persmap-table_row_column"
      >
        32
      </td>
      <td
        className="persmap-table_row_column"
      >
        33
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table component test Snapshot tests for each modifier renders table only with striped turned on and matches snapshot 1`] = `
<table
  className="persmap-table persmap-table--striped"
>
  <thead
    className="persmap-table_header"
  >
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <th
        className="persmap-table_header_item"
      >
        
      </th>
      <th
        className="persmap-table_header_item"
      >
        id
      </th>
      <th
        className="persmap-table_header_item"
      >
        col1
      </th>
      <th
        className="persmap-table_header_item"
      >
        col2
      </th>
      <th
        className="persmap-table_header_item"
      >
        col3
      </th>
    </tr>
  </thead>
  <tbody
    className="persmap-table_body"
  >
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        1
      </td>
      <td
        className="persmap-table_row_column"
      >
        11
      </td>
      <td
        className="persmap-table_row_column"
      >
        12
      </td>
      <td
        className="persmap-table_row_column"
      >
        13
      </td>
    </tr>
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-chevron-down persmap-table_row--control"
          id={undefined}
          onClick={[Function]}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        2
      </td>
      <td
        className="persmap-table_row_column"
      >
        21
      </td>
      <td
        className="persmap-table_row_column"
      >
        22
      </td>
      <td
        className="persmap-table_row_column"
      >
        23
      </td>
    </tr>
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        3
      </td>
      <td
        className="persmap-table_row_column"
      >
        31
      </td>
      <td
        className="persmap-table_row_column"
      >
        32
      </td>
      <td
        className="persmap-table_row_column"
      >
        33
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table component test Snapshot tests for each modifier renders table with all modifiers turned off and matches snapshot 1`] = `
<table
  className="persmap-table"
>
  <thead
    className="persmap-table_header"
  >
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <th
        className="persmap-table_header_item"
      >
        
      </th>
      <th
        className="persmap-table_header_item"
      >
        id
      </th>
      <th
        className="persmap-table_header_item"
      >
        col1
      </th>
      <th
        className="persmap-table_header_item"
      >
        col2
      </th>
      <th
        className="persmap-table_header_item"
      >
        col3
      </th>
    </tr>
  </thead>
  <tbody
    className="persmap-table_body"
  >
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        1
      </td>
      <td
        className="persmap-table_row_column"
      >
        11
      </td>
      <td
        className="persmap-table_row_column"
      >
        12
      </td>
      <td
        className="persmap-table_row_column"
      >
        13
      </td>
    </tr>
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-chevron-down persmap-table_row--control"
          id={undefined}
          onClick={[Function]}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        2
      </td>
      <td
        className="persmap-table_row_column"
      >
        21
      </td>
      <td
        className="persmap-table_row_column"
      >
        22
      </td>
      <td
        className="persmap-table_row_column"
      >
        23
      </td>
    </tr>
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        3
      </td>
      <td
        className="persmap-table_row_column"
      >
        31
      </td>
      <td
        className="persmap-table_row_column"
      >
        32
      </td>
      <td
        className="persmap-table_row_column"
      >
        33
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table component test Snapshot tests for each modifier renders table with all modifiers turned on and matches snapshot 1`] = `
<table
  className="persmap-table persmap-table--condensed persmap-table--bordered persmap-table--striped persmap-table--hovered"
>
  <thead
    className="persmap-table_header"
  >
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <th
        className="persmap-table_header_item"
      >
        
      </th>
      <th
        className="persmap-table_header_item"
      >
        id
      </th>
      <th
        className="persmap-table_header_item"
      >
        col1
      </th>
      <th
        className="persmap-table_header_item"
      >
        col2
      </th>
      <th
        className="persmap-table_header_item"
      >
        col3
      </th>
    </tr>
  </thead>
  <tbody
    className="persmap-table_body"
  >
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        1
      </td>
      <td
        className="persmap-table_row_column"
      >
        11
      </td>
      <td
        className="persmap-table_row_column"
      >
        12
      </td>
      <td
        className="persmap-table_row_column"
      >
        13
      </td>
    </tr>
    <tr
      className="persmap-table_row"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-chevron-down persmap-table_row--control"
          id={undefined}
          onClick={[Function]}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        2
      </td>
      <td
        className="persmap-table_row_column"
      >
        21
      </td>
      <td
        className="persmap-table_row_column"
      >
        22
      </td>
      <td
        className="persmap-table_row_column"
      >
        23
      </td>
    </tr>
    <tr
      className="persmap-table_row persmap-table_row--odd"
      onClick={[Function]}
    >
      <td
        className="persmap-table_row_column"
      >
        <span
          className="persmap-icon fa fa-plus-circle"
          id={undefined}
          onClick={undefined}
        />
      </td>
      <td
        className="persmap-table_row_column"
      >
        3
      </td>
      <td
        className="persmap-table_row_column"
      >
        31
      </td>
      <td
        className="persmap-table_row_column"
      >
        32
      </td>
      <td
        className="persmap-table_row_column"
      >
        33
      </td>
    </tr>
  </tbody>
</table>
`;
